--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
     <div class="container">
         <div class="todo-app">
-            <h2>To Do List <img src="/images /200w-1.webp"></h2>
+            <h2>To Do List <img src="/images /icon.png"></h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your text">
                 <button>Add</button>
             </div>
             <ul id="list-container">
-                <li>task one</li>
+                <!-- <li class="checked">task one</li>
                 <li>task two</li>
-                <li>task three</li>
+                <li>task three</li> -->
             </ul>
         </div>
     </div>
-
+<script src="script.js"></script>
 </body>
 </html>
