--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <button onclick="addTask()">Add</button>
             </div>
             <ul id="list-container">
-                <!-- <li class="checked">task one</li>
+                <li class="checked">task one</li>
                 <li>task two</li>
-                <li>task three</li> -->
+                <li>task three</li>
             </ul>
         </div>
     </div>
